2016-06-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (prf_sha256): Use correct buffer length.

2016-06-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (prf_sha256): Fix memory leak.

2016-06-28  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (hmac_sha256): Constify parameters.
	(prf_sha256, nasl_prf_sha256): New functions

	* nasl/nasl_crypto.h: Add new function prototype.

	* nasl/nasl_init.c (libfuncs): Add prf_sha256() function.

2016-06-28  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto2.c (nasl_load_privkey_param): Use
	gnutls_x509_privkey_import2().
	(nasl_rsa_get_modulus, nasl_rsa_get_exponent): New functions.

	* nasl/nasl_crypto.h: Add new functions prototypes.

	* nasl/nasl_init.c (libfuncs): Add rsa_get_modulus() and
	rsa_get_exponent().

2016-06-28  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (nasl_hmac_sha384): New function.
	(hmac_sha512): Remove function.
	(nasl_hmac_sha512): Use nasl_hmac().

	* nasl/nasl_crypto.h: Add new function prototype.

	* nasl/nasl_init.c (libfuncs): Add HMAC_SHA384().

2016-06-28  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (nasl_hmac_sha256): Take only data and key
	parameters.
	(hmac_sha512, nasl_hmac_sha512): New functions.

	* nasl/nasl_crypto.h: Add new function prototype.

	* nasl/nasl_init.c (libfuncs): Add HMAC_SHA512(). Capitalize
	hmac_sha256() for consistency.

2016-06-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto2.c (nasl_rsa_public_encrypt): New function.

	* nasl/nasl_crypto2.h: Add new function header.

	* nasl/nasl_init.c (libfuncs): Add rsa_public_encrypt.

2016-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Increase required cmake version from 2.6
	to 2.8 because 2.8 is the minimum version we are sure it
	works with.

	* INSTALL: Update accordingly.
