@@ -783,72 +783,6 @@ ret:
 }
 
 /**
- * @brief Get the modulus from a RSA private key.
- */
-tree_cell *
-nasl_rsa_get_modulus (lex_ctxt * lexic)
-{
-  tree_cell *retc = NULL;
-  gnutls_x509_privkey_t privkey = NULL;
-  gnutls_datum_t m;
-  int err;
-
-  retc = alloc_tree_cell (0, NULL);
-  retc->type = CONST_DATA;
-  privkey = nasl_load_privkey_param (lexic, "priv", "passphrase");
-  if (!privkey)
-    goto fail;
-
-  err =
-    gnutls_x509_privkey_export_rsa_raw (privkey, &m, NULL, NULL, NULL, NULL, NULL);
-  if (err)
-    {
-      print_tls_error (lexic, "gnutls_x509_privkey_export_rsa_raw", err);
-      goto fail;
-    }
-  retc->size = m.size;
-  retc->x.str_val = g_memdup (m.data, m.size);
-  gnutls_free (m.data);
-
-fail:
-  gnutls_x509_privkey_deinit (privkey);
-  return retc;
-}
-
-/**
- * @brief Get the public exponent from a RSA private key.
- */
-tree_cell *
-nasl_rsa_get_pubexp (lex_ctxt * lexic)
-{
-  tree_cell *retc = NULL;
-  gnutls_x509_privkey_t privkey = NULL;
-  gnutls_datum_t e;
-  int err;
-
-  retc = alloc_tree_cell (0, NULL);
-  retc->type = CONST_DATA;
-  privkey = nasl_load_privkey_param (lexic, "priv", "passphrase");
-  if (!privkey)
-    goto fail;
-
-  err =
-    gnutls_x509_privkey_export_rsa_raw (privkey, NULL, &e, NULL, NULL, NULL, NULL);
-  if (err)
-    {
-      print_tls_error (lexic, "gnutls_x509_privkey_export_rsa_raw", err);
-      goto fail;
-    }
-  retc->size = e.size;
-  retc->x.str_val = g_memdup (e.data, e.size);
-  gnutls_free (e.data);
-
-fail:
-  gnutls_x509_privkey_deinit (privkey);
-  return retc;
-}
-
-/**
  * @brief Creates a libgcryt s-expression from a GnuTLS private RSA key.
  */
 #define NUM_RSA_PARAMS 6
